# chip8_emulator

./: .gitignore  Cargo.toml  README.md  index.html  style.css  test.txt  wgpu_put_pixels_example
src/: emulator.rs  instruction.rs  keyboard.rs  lib.rs  main.rs  screen.rs  wgpu_state.rs
