[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
pixels = "0.13.0"
env_logger = "0.11.5"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_error_panic_hook = "0.1.6"
#console_log = "1.0"
#wasm-bindgen = "0.2"
#web-sys = { version = "0.3", features = [
#    "Document",
#    "Window",
#    "Element",
#]}
