[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
winit = {version = "0.30.5", features = ["rwh_05"]}
# winit_input_helper = "0.16"
pixels = "0.14.0"
env_logger = "0.11.5"
cfg-if = "1"
log = "0.4"
# wgpu = "22.0"
pollster = "0.3"
chrono = "0.4.38"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.30"
getrandom = {version = "0.2", features = ["js"]}
console_error_panic_hook = "0.1.6"
console_log = "1.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
